bindings/python/echo_sdk/_echosdk_clean.h

typedef struct baresdk_account *baresdk_account_handle_t;
typedef struct baresdk_call *baresdk_call_handle_t;
typedef enum {
 BARESDK_TRANSPORT_UDP = 0,
 BARESDK_TRANSPORT_TCP,
 BARESDK_TRANSPORT_TLS,
 BARESDK_TRANSPORT_WS,
 BARESDK_TRANSPORT_WSS,
} baresdk_transport_t;
typedef enum {
 BARESDK_MEDIA_ENC_NONE = 0,
 BARESDK_MEDIA_ENC_SDES,
 BARESDK_MEDIA_ENC_DTLS_SRTP,
} baresdk_media_enc_t;
typedef enum {
 BARESDK_CODEC_OPUS = 0,
 BARESDK_CODEC_PCMU,
 BARESDK_CODEC_PCMA,
 BARESDK_CODEC_G722,
 BARESDK_CODEC_G726_32,
} baresdk_codec_t;
typedef enum {
 BARESDK_MOS_EMODEL = 0,
 BARESDK_MOS_SIMPLIFIED,
} baresdk_mos_method_t;
typedef uint8_t baresdk_aec_mode_t;
typedef enum {
 BARESDK_MEDIA_DIR_RX = 0,
 BARESDK_MEDIA_DIR_TX,
} baresdk_media_dir_t;
typedef enum {
 BARESDK_JBUF_ADAPTIVE = 0,
 BARESDK_JBUF_FIXED = 1,
} baresdk_jbuf_type_t;
typedef enum {

 BARESDK_ICE_HANDOVER_BEST_EFFORT = 0,
 BARESDK_ICE_HANDOVER_FAIL_FAST,
} baresdk_ice_handover_t;
typedef struct {
 int bitrate;
 int complexity;
 bool cbr;
 bool dtx;
 bool fec;
 bool stereo;
} baresdk_opus_config_t;
typedef enum {
 BARESDK_OK = 0,
 BARESDK_ERR_INVAL = -1,
 BARESDK_ERR_NOMEM = -2,
 BARESDK_ERR_STATE = -3,
 BARESDK_ERR_DNS = -4,
 BARESDK_ERR_TRANSPORT = -5,
 BARESDK_ERR_AUTH = -6,
 BARESDK_ERR_SERVER_5XX = -7,
 BARESDK_ERR_WS_PROTOCOL_REJECTED = -8,
 BARESDK_ERR_TIMEOUT = -9,
 BARESDK_ERR_ALREADY = -10,
} baresdk_error_t;
typedef enum {
 BARESDK_CALL_CALLING = 0,
 BARESDK_CALL_RINGING,
 BARESDK_CALL_ESTABLISHED,
 BARESDK_CALL_HELD,
 BARESDK_CALL_ENDED,
 BARESDK_CALL_CANCELLED,
 BARESDK_CALL_FAILED,
} baresdk_call_state_t;
typedef enum {
 BARESDK_REG_UNREGISTERED = 0,
 BARESDK_REG_REGISTERING,
 BARESDK_REG_REGISTERED,

 BARESDK_REG_FAILED,
 BARESDK_REG_UNREGISTERING,
 BARESDK_REG_RECONNECTING,
} baresdk_reg_state_t;
typedef enum {
 BARESDK_PRESENCE_UNKNOWN = 0,
 BARESDK_PRESENCE_OPEN,
 BARESDK_PRESENCE_CLOSED,
 BARESDK_PRESENCE_BUSY,
} baresdk_presence_status_t;
typedef enum {
 BARESDK_100REL_DISABLED = 0,
 BARESDK_100REL_ENABLED = 1,
 BARESDK_100REL_REQUIRED = 2,
} baresdk_100rel_mode_t;
typedef enum {
 BARESDK_EV_LOG = 0,
 BARESDK_EV_REG_STATE,
 BARESDK_EV_INCOMING_CALL,
 BARESDK_EV_CALL_STATE,
 BARESDK_EV_CALL_DTMF,
 BARESDK_EV_SDP_NEGOTIATION,
 BARESDK_EV_SIP_TRACE,
 BARESDK_EV_MEDIA_STATS,
 BARESDK_EV_REGISTRAR_WARNING,
 BARESDK_EV_TRANSFER_REQUEST,
 BARESDK_EV_MWI,
 BARESDK_EV_MESSAGE,
 BARESDK_EV_PRESENCE_STATE,
 BARESDK_EV_QUALITY_ALERT,
 BARESDK_EV_NETWORK,

 BARESDK_EV_TRANSFER_FAILED,
} baresdk_event_type_t;
typedef struct {
 baresdk_net_event_t event;
 baresdk_call_handle_t call;
 baresdk_account_handle_t account;
 const char *local_addr;
 uint32_t attempt;
 uint32_t max_attempts;
 uint32_t elapsed_ms;
 bool ice;
 baresdk_error_t error;
} baresdk_ev_network_t;
typedef struct {
 baresdk_account_handle_t account;
 baresdk_reg_state_t state;
 baresdk_error_t error;
 uint32_t retry_attempt;
 uint32_t retry_delay_ms;
 const char *error_str;
} baresdk_ev_reg_state_t;
typedef struct {
 baresdk_account_handle_t account;
 baresdk_call_handle_t call;
 const char *from_uri;
 const char *display_name;
} baresdk_ev_incoming_call_t;
typedef struct {
 baresdk_account_handle_t account;
 baresdk_call_handle_t call;
 baresdk_call_state_t state;
 baresdk_error_t error;
 const char *reason;
} baresdk_ev_call_state_t;
typedef struct {
 baresdk_call_handle_t call;
 char digit;
} baresdk_ev_call_dtmf_t;
typedef struct {
 baresdk_call_handle_t call;
 const char *local_sdp;
 const char *remote_sdp;
 const char *negotiated_codec;
 const char *negotiated_crypto;
 const char * const *rejected_codecs;
 const char * const *warnings;
} baresdk_ev_sdp_negotiation_t;
typedef struct {
 baresdk_media_dir_t dir;
 const char *transport;
 const char *remote_addr;
 const char *raw_message;
 uint64_t timestamp_us;
} baresdk_ev_sip_trace_t;
typedef struct {
 baresdk_call_handle_t call;
 uint32_t packets_sent;
 uint32_t packets_received;
 uint32_t packets_lost;
 uint32_t packets_lost_rx;
 uint32_t bytes_sent;
 uint32_t bytes_received;
 uint32_t tx_errors;
 uint32_t rx_errors;
 float loss_pct;
 float loss_pct_rx;
 float jitter_ms;
 float tx_jitter_ms;
 float rtt_ms;
 uint32_t jitter_buffer_ms;
 uint32_t jitter_buffer_load;
 uint32_t late_packets;
 uint32_t discarded_packets;
 uint32_t jitter_buffer_target_ms;
 bool jitter_buffer_adaptive;
 uint32_t plc_frames;
 float plc_ratio;
 uint32_t bandwidth_kbps_tx;
 uint32_t bandwidth_kbps_rx;
 uint32_t avg_bandwidth_kbps_tx;
 uint32_t avg_bandwidth_kbps_rx;
 float mos_lq;
 float mos_cq;
 float mos_lq_rx;
 float mos_cq_rx;
 baresdk_mos_method_t mos_method;
 const char *codec_name;
 uint32_t codec_clock_rate;
 uint32_t codec_sample_rate;
 uint8_t codec_channels;
 int payload_type;
 float audio_level_dbov;

 float mic_level_dbov;

 uint32_t ssrc_tx;
 uint32_t ssrc_rx;
 char remote_addr[64];
 float mos_lq_min;
 float mos_lq_avg;
 uint32_t stats_tick;
 uint64_t call_duration_ms;
 bool is_final;
} baresdk_ev_media_stats_t;
typedef struct {
 const char *message;
} baresdk_ev_log_t;
typedef struct {
 const char *message;
} baresdk_ev_registrar_warning_t;
typedef struct {
 baresdk_account_handle_t account;
 baresdk_call_handle_t call;
 const char *refer_to_uri;
 bool has_replaces;
 bool auto_followed;
} baresdk_ev_transfer_req_t;
typedef struct {
 baresdk_account_handle_t account;
 baresdk_call_handle_t call;
 const char *reason;
} baresdk_ev_transfer_failed_t;
typedef struct {
 baresdk_account_handle_t account;
 bool messages_waiting;
 uint32_t new_voice;
 uint32_t old_voice;
 uint32_t new_urgent;
 uint32_t old_urgent;
 const char *raw_body;
} baresdk_ev_mwi_t;
typedef struct {
 baresdk_account_handle_t account;
 const char *from_uri;
 const char *body;
 const char *content_type;
} baresdk_ev_message_t;
typedef struct {
 baresdk_account_handle_t account;
 const char *target_uri;
 baresdk_presence_status_t status;
} baresdk_ev_presence_state_t;
typedef struct {
 baresdk_call_handle_t call;
 baresdk_quality_issue_t issue;
 float value;
 float threshold;
 bool recovering;
} baresdk_ev_quality_alert_t;
typedef struct {
 baresdk_event_type_t type;
 union {
  baresdk_ev_log_t log;
  baresdk_ev_reg_state_t reg;
  baresdk_ev_incoming_call_t incoming;
  baresdk_ev_call_state_t call_state;
  baresdk_ev_call_dtmf_t dtmf;
  baresdk_ev_sdp_negotiation_t sdp;
  baresdk_ev_sip_trace_t sip_trace;
  baresdk_ev_media_stats_t stats;
  baresdk_ev_registrar_warning_t reg_warn;
  baresdk_ev_transfer_req_t transfer_req;
  baresdk_ev_transfer_failed_t transfer_failed;
  baresdk_ev_mwi_t mwi;
  baresdk_ev_message_t msg;
  baresdk_ev_presence_state_t presence;
  baresdk_ev_quality_alert_t quality_alert;
  baresdk_ev_network_t network;
 } u;
} baresdk_event_t;
typedef void (*baresdk_event_cb_t)(const baresdk_event_t *ev, void *userdata);
typedef struct {

 uint32_t version;
 size_t struct_size;
 baresdk_transport_t transport;
 const char *local_ip;
 uint16_t local_port;
 const char *bind_interface;
 bool prefer_ipv6;

 const char *sip_domain;
 const char *server_url;
 const char *server_host;
 uint16_t server_port;

 const char *outbound_proxy;
 const char *ca_cert_path;
 const char *client_cert;
 const char *client_key;
 bool verify_server;
 const char *sni_hostname;
 const char *user_agent;
 const char *ws_origin;
 const char **ws_extra_headers;
 uint32_t ws_keepalive_ms;
 const char *stun_server;
 const char *turn_server;
 const char *turn_user;
 const char *turn_pass;
 bool ice_enabled;
 bool rtcp_mux;
 baresdk_media_enc_t media_enc;
 baresdk_codec_t audio_codecs[8];
 int audio_codec_count;
 uint8_t dscp_sip;
 uint8_t dscp_rtp;
 bool enable_video;
 baresdk_aec_mode_t aec_mode;
 bool ns;
 bool agc;
 float aec_suppression_level;
 float mic_gain_db;
 float speaker_gain_db;
 baresdk_opus_config_t opus;
 baresdk_jbuf_type_t jbuf_type;
 uint32_t jitter_buffer_min_ms;
 uint32_t jitter_buffer_max_ms;
 uint32_t reg_expires;
 uint32_t reg_refresh_pct;
 uint32_t keepalive_interval;
 uint32_t reg_retry_initial_ms;
 uint32_t reg_retry_max_ms;
 float reg_retry_backoff;
 uint32_t reg_retry_max_attempts;
 float reg_retry_jitter;
 uint32_t sip_t1_ms;
 uint32_t sip_t2_ms;
 uint32_t sip_timer_b_ms;

 uint32_t sip_timer_f_ms;
 bool session_timer_enabled;
 uint32_t session_expires_s;
 uint32_t session_min_se_s;
 uint32_t stats_interval_ms;
 baresdk_mos_method_t mos_method;

 float mos_alert_threshold;
 float loss_alert_threshold;
 float jitter_alert_threshold;
 const char *tmp_dir;
 bool trace_sip;
 bool trace_sdp_diff;
 const char *pcap_path;
 int log_level;
 baresdk_event_cb_t event_cb;
 void *event_userdata;
 uint32_t net_monitor_interval_s;
 uint32_t net_settle_ms;
 bool net_reinvite_calls;

 bool net_hangup_on_migration_failure;
 uint32_t net_verify_ms;

 uint32_t net_max_attempts;
 bool deliver_owned_events;
 char audio_codec_names[8][32];
 int audio_codec_name_count;
 bool platform_audio_activate;
 uint32_t rtp_timeout_s;
 uint32_t media_stall_ms;
 bool adaptive_bitrate;
 uint32_t adapt_min_bitrate;
 uint32_t adapt_max_bitrate;
 float adapt_loss_down_pct;
 float adapt_loss_up_pct;
 uint32_t adapt_recover_ticks;
 uint32_t opus_expected_loss_pct;
 bool keepalive_reregister;
 bool dns_srv_failover;

 baresdk_ice_handover_t net_ice_handover;
 uint32_t ice_gathering_timeout_ms;

} baresdk_config_t;
typedef struct {
 char name[128];
 char description[256];
 bool is_default;
} baresdk_audio_device_t;